# musyx

./: CMakeLists.txt
include/musyx/: assert.h  dspvoice.h  hardware.h  musyx.h  platform.h  s3d.h  sal.h  seq.h  stream.h  synth.h  synthdata.h  version.h  voice.h
src/musyx/runtime/: dsp_import.c  hardware.c  hw_aramdma.c  hw_dolphin.c  hw_dspctrl.c  hw_lib_dolphin.c  hw_memory.c  hw_pc.c  profile.c  s_data.c  seq.c  seq_api.c  snd3d.c  snd_init.c  snd_math.c  snd_midictrl.c  snd_service.c  snd_synthapi.c  stream.c  synth.c  synth_ac.c  synth_adsr.c  synth_vsamples.c  synthdata.c  synthmacros.c  synthvoice.c
src/musyx/runtime/CheapReverb/: creverb.c
src/musyx/runtime/Chorus/: chorus_fx.c
src/musyx/runtime/StdReverb/: reverb.c
src/musyx/runtime/pc/: hardware.c  hw_dspctrl.c
